# backend

./: .gitignore  Cargo.toml  README.md  build.gradle.kts
src/: main.rs
src/main/kotlin/app/desc/backend/: BackendApplication.kt
src/main/kotlin/app/desc/backend/controllers/: AuthenticatedTestController.kt  LoginController.kt  RegisterController.kt
src/main/kotlin/app/desc/backend/models/: CustomUserDetails.kt  UserDAO.kt
src/main/kotlin/app/desc/backend/repositories/: IUserRepository.kt
src/main/kotlin/app/desc/backend/security/: InvalidJwtException.kt  JwtAuthenticationEntryPoint.kt  JwtAuthenticationFilter.kt  WebSecurityConfig.kt
src/main/kotlin/app/desc/backend/services/: CustomUserDetailsService.kt  JwtService.kt  UserService.kt
src/main/resources/: application.properties
src/models/: ctx.rs  mod.rs  user.rs
src/services/: hash.rs  jwt.rs  mod.rs  user.rs
src/test/kotlin/app/desc/backend/: BackendApplicationTests.kt
