[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
actix-web = "4.0.1"
jwt-simple = "0.10.8"
argon2 = "0.3.4"
rand_core = { version = "0.6.3", features = ["std"] }
